# dataclassgen-demo

./: AGENTS.md  README.md  dataclassgen.py  pyproject.toml  test_dataclassgen.py
.github/workflows/: ci.yml
